objects/PicklistTest1__c.object
<CustomObject>
    <description>PicklistTest1 test</description>
    <fields>
        <fullName>PTLookupFiled1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PTLookupFiled1</description>
        <inlineHelpText>PTLookupFiled1</inlineHelpText>
        <label>PicklistTest1</label>
        <referenceTo>PicklistTest1__c</referenceTo>
        <relationshipLabel>PicklistTest1s</relationshipLabel>
        <relationshipName>PicklistTest1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatesInfo__c</fullName>
        <description>text field testing</description>
        <label>StatesInfo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ap</fullName>
                </value>
                <value>
                    <fullName>ts</fullName>
                </value>
                <value>
                    <fullName>tn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <description>country</description>
        <inlineHelpText>country</inlineHelpText>
        <label>country</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>PicklistTest1</label>
    <nameField>
        <label>PicklistTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PicklistTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>